Bug 895239 - Serialize non-textual container element as placeholder if OutputNonTextContentAsPlaceholder is set. r=smaug